charts/hub/landing-page/templates/landing-page-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: landing-page
  name: landing-page
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      deploymentconfig: landing-page
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: landing-page
        deploymentconfig: landing-page
      name: landing-page
    spec:
      containers:
      - name: apache
        image: registry.access.redhat.com/ubi8/httpd-24
        #imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /var/www/html
          name: landing-page-configmap
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe:
          httpGet:
            path: /index.html
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
      volumes:
      - name: landing-page-configmap
        configMap:
          defaultMode: 438
          name: landing-page-configmap
