charts/hub/landing-page/templates/landing-page-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: landing-page
  name: landing-page
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: landing-page
    deploymentconfig: landing-page
  sessionAffinity: None
  type: ClusterIP
