charts/hub/landing-page/templates/landing-page-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: landing-page
  name: landing-page
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: landing-page
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
